# filingrail-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
distribution/claude-connector/: README.md  claude_desktop_config.json
distribution/custom-gpt/: BUILD-AND-PUBLISH.md  gpt-profile.md  openapi-actions-schema.yaml  system-instructions.md
src/filingrail_mcp/: __init__.py  __main__.py  server.py
